--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@securescribe" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
   </head>
 
   <body class="bg-black">
