changed index file to update the headers tags and meta data

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SecureScribe - Security Policy Analyzer</title>
-    <meta name="description" content="Evaluate security policies against compliance frameworks like ISO 27001" />
-    <meta name="author" content="SecureScribe" />
+    <title>Ryzr</title>
+    <meta name="description" content="AI agent to evaluate security policies and SOC 2 reports against requirements of ISO 27001, NIST, etc." />
+    <meta name="author" content="Ryzr" />
 
-    <meta property="og:title" content="SecureScribe - Security Policy Analyzer" />
-    <meta property="og:description" content="Evaluate security policies against compliance frameworks like ISO 27001" />
+    <meta property="og:title" content="Ryzr" />
+    <meta property="og:description" content="AI agent to evaluate security policies and SOC 2 reports against requirements of ISO 27001, NIST, etc." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@securescribe" />
+    <meta name="twitter:site" content="@ryzr" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
