--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta name="twitter:image" content="https://www.ryzr.io/assets/image-og.png" />
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet" />
   </head>
 
   <body class="bg-black dark selection:bg-sky-600 selection:text-white">
